--- a/src/components/SelectNegeri.astro
+++ b/src/components/SelectNegeri.astro
@@ -20,14 +20,14 @@ Object.keys(Constants.locations).map((el: any) => {
 	if (negeriLabel == el) {
 		// const d = String(el);
 		// console.log(d);
-		console.log(Constants.locations);
+		//console.log(Constants.locations);
 	}
 });
 ---
 
 <!-- Open the modal using ID.showModal() method -->
 <button
-	class="btn absolute z-10 top-0.5 btn-ghost m-1"
+	class="left-20 btn absolute z-10 top-0.5 btn-ghost m-1"
 	onclick="my_modal_1.showModal()"
 >
 	{negeriLabel}<svg
