--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -13,6 +13,65 @@
 			<!-- <br/> -->
 			. waktu solat malaysia
 		</a>
+		<div class="hidden navbar nav">
+			<div class="navbar-start">
+				<a class="btn btn-ghost text-lg" href="/" title="back to home"
+					>adhan.app</a
+				>
+			</div>
+			<div class="navbar-center"></div>
+			<div class="navbar-end">
+				<div class="dropdown dropdown-end">
+					<div
+						tabindex="0"
+						role="button"
+						class="btn btn-md btn-ghost rounded-btn text-xs uppercase"
+					>
+						...
+					</div>
+
+					<ul
+						tabindex="0"
+						class="menu dropdown-content p-2 shadow bg-base-200 rounded-box w-44 mt-4 z-20"
+					>
+						<li>
+							<label class="cursor-pointer label">
+								<input
+									type="checkbox"
+									title="toggle theme"
+									checked="checked"
+									class="checkbox checkbox-accent checkbox-xs"
+								/>
+								<span class="label-text">toggle theme</span>
+							</label>
+						</li>
+						<li>
+							<label class="cursor-pointer label">
+								<input
+									type="checkbox"
+									title="minimal mode"
+									checked="checked"
+									class="checkbox checkbox-accent checkbox-xs"
+								/>
+								<span class="label-text">minimal mode</span>
+							</label>
+						</li>
+						<hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
+						<li>
+							<label class="cursor-pointer label">
+								<input
+									name="worksonffline"
+									type="checkbox"
+									title="works offline"
+									checked="checked"
+									class="checkbox checkbox-accent checkbox-xs"
+								/>
+								<span class="label-text">works offline</span>
+							</label>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</aside>
 </footer>
-
