--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -74,6 +74,7 @@ const { title, state, city } = Astro.props;
 		line-height: 1.6;
 	}
 	main .nav {
+		position: relative;
 		margin: auto;
 		/* padding: 1rem; */
 		width: 1200px;
