--- a/src/components/PrayerTimeTable.astro
+++ b/src/components/PrayerTimeTable.astro
@@ -36,7 +36,7 @@ const { hijri, date, day, ...filteredObject } = waktuSolat; // exclude hijri, da
 ---
 
 <div class="overflow-x-auto">
- <table class="table table-lg">
+ <table class="table text-center">
   <thead>
    <tr>
     <th>Waktu</th>
