--- a/src/components/SelectNegeri.astro
+++ b/src/components/SelectNegeri.astro
@@ -25,11 +25,7 @@ Object.keys(Constants.locations).map((el: any) => {
 });
 ---
 
-<!-- Open the modal using ID.showModal() method -->
-<button
-	class="left-20 btn absolute z-10 top-0.5 btn-ghost m-1"
-	onclick="my_modal_1.showModal()"
->
+<button class="btn btn-ghost" onclick="my_modal_1.showModal()">
 	{negeriLabel}<svg
 		xmlns="http://www.w3.org/2000/svg"
 		fill="none"
@@ -57,7 +53,6 @@ Object.keys(Constants.locations).map((el: any) => {
 		</ul>
 		<div class="modal-action absolute mt-0 top-2 right-2">
 			<form method="dialog">
-				<!-- if there is a button in form, it will close the modal -->
 				<button class="btn btn-circle"
 					><svg
 						xmlns="http://www.w3.org/2000/svg"
