--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -14,24 +14,28 @@ const stateNew =
 		"get waktusolat cities from localstorage";
 ---
 
-<main class="bg-base-100">
+<main class="bg-base-100 sticky top-0 z-10">
 	<section class="subnav bg-base-100">
-		<div class="nav my-0">
-			<a
-				class="btn absolute z-10 top-0.5 btn-ghost m-1 text-sm"
-				href="/"
-				title="back to home"
-				><svg
-					xmlns="http://www.w3.org/2000/svg"
-					class="inline-block w-6 h-6 fill-white"
-					viewBox="0 0 48 48"
-				>
-					<path
-						d="M39.5,43h-9c-1.381,0-2.5-1.119-2.5-2.5v-9c0-1.105-0.895-2-2-2h-4c-1.105,0-2,0.895-2,2v9c0,1.381-1.119,2.5-2.5,2.5h-9	C7.119,43,6,41.881,6,40.5V21.413c0-2.299,1.054-4.471,2.859-5.893L23.071,4.321c0.545-0.428,1.313-0.428,1.857,0L39.142,15.52	C40.947,16.942,42,19.113,42,21.411V40.5C42,41.881,40.881,43,39.5,43z"
-					></path>
-				</svg>
-			</a>
-			<SelectNegeri />
+		<div class="nav">
+			<div class="absolute z-10">
+				<div class="flex home">
+					<a
+						class="btn btn-ghost bg-orange-500 text-sm"
+						href="/"
+						title="back to home"
+						><svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="w-6 h-6 fill-white"
+							viewBox="0 0 48 48"
+						>
+							<path
+								d="M39.5,43h-9c-1.381,0-2.5-1.119-2.5-2.5v-9c0-1.105-0.895-2-2-2h-4c-1.105,0-2,0.895-2,2v9c0,1.381-1.119,2.5-2.5,2.5h-9	C7.119,43,6,41.881,6,40.5V21.413c0-2.299,1.054-4.471,2.859-5.893L23.071,4.321c0.545-0.428,1.313-0.428,1.857,0L39.142,15.52	C40.947,16.942,42,19.113,42,21.411V40.5C42,41.881,40.881,43,39.5,43z"
+							></path>
+						</svg>
+					</a>
+					<SelectNegeri />
+				</div>
+			</div>
 			<div tabindex="0" class="collapse collapse-arrow">
 				<div class="collapse-title text-sm flex items-center"></div>
 				<div class="p-0 collapse-content overflow-y-auto">
@@ -42,3 +46,9 @@ const stateNew =
 		<hr class="h-px border-0 dark:bg-gray-700" />
 	</section>
 </main>
+
+<style>
+	.home {
+		margin-top: 6px;
+	}
+</style>
