remove backgroud on home icon

--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -8,7 +8,7 @@ const { city } = Astro.params;
 		<div class="stats shadow">
 			{
 				cities.map((el: any) => (
-					<div class="stat">
+					<div class="stat pt-0 pb-0">
 						<a href={"/" + state + "/" + el[0]}>
 							<div
 								class={
