--- a/src/pages/[state]/[city].astro
+++ b/src/pages/[state]/[city].astro
@@ -109,7 +109,7 @@ for (const key in filteredObject) {
 	>
 		<div>
 			<h1 class="text-center text-xl font-bold">{location}</h1>
-			<div class="flex justify-evenly items-center">
+			<div class="hidden flex justify-evenly items-center">
 				<small>{hijri}, {date}, {day}</small>
 			</div>
 		</div>
