--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,8 +19,8 @@ const state =
 	>
 		<div>
 			<h1 class="text-center text-xl font-bold">{city}</h1>
-			<hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
-			<div class="flex justify-evenly items-center">
+			<hr class="hidden h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
+			<div class="hidden flex justify-evenly items-center">
 				<!--			<small>{hijri}, {date}, {day}</small>-->
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
@@ -35,7 +35,7 @@ const state =
 					></path></svg
 				>
 			</div>
-			<hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
+			<hr class="hidden h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
 		</div>
 		<div>
 			<PrayerTimeTable />
