--- a/src/components/SelectNegeri.astro
+++ b/src/components/SelectNegeri.astro
@@ -25,7 +25,7 @@ Object.keys(Constants.locations).map((el: any) => {
 });
 ---
 
-<button class="btn btn-ghost" onclick="my_modal_1.showModal()">
+<button class="btn btn-ghost ml-2" onclick="my_modal_1.showModal()">
 	{negeriLabel}<svg
 		xmlns="http://www.w3.org/2000/svg"
 		fill="none"
@@ -71,57 +71,3 @@ Object.keys(Constants.locations).map((el: any) => {
 		</div>
 	</div>
 </dialog>
-
-<!--
-<div class="dropdown absolute z-10 top-0.5">
-	<div tabindex="0" role="button" class="btn btn-ghost m-1">
-		{negeriLabel}<svg
-			xmlns="http://www.w3.org/2000/svg"
-			fill="none"
-			viewBox="0 0 24 24"
-			stroke-width="1.5"
-			stroke="currentColor"
-			class="w-6 h-6"
-		>
-			<path
-				stroke-linecap="round"
-				stroke-linejoin="round"
-				d="M8.25 15 12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"></path>
-		</svg>
-	</div>
-	<ul
-		tabindex="0"
-		class="dropdown-content z-[1] menu p-2 shadow bg-base-200 rounded-box w-52"
-	>
-		{
-			Object.keys(Constants.locations).map((el: any) => (
-				<li>
-					<a href={"/" + el}>{el}</a>
-				</li>
-			))
-		}
-	</ul>
-</div>
--->
-
-<!-- <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700"> -->
-
-<!-- <div class="divider divider-start">
-	{negeriLabel}
-	<div class="dropdown dropdown-start">
-	  <div tabindex="0" role="button" class="btn btn-circle btn-ghost btn-md text-info">
-		<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-			<path stroke-linecap="round" stroke-linejoin="round" d="M8.25 15 12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9" />
-		  </svg>
-	  </div>
-	  <div tabindex="0" class="card compact dropdown-content z-[1] shadow bg-base-100 rounded-box w-64">
-		<div tabindex="0" class="card-body">
-			<ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
-				{Object.keys(Constants.locations).map((el: any) => 
-					<li><a href={'/' + el}>{el}</a></li>
-					)}
-			</ul>
-		</div>
-	  </div>
-	</div>
-</div> -->
