--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -19,10 +19,7 @@ const stateNew =
 		<div class="nav">
 			<div class="absolute z-10">
 				<div class="flex home">
-					<a
-						class="btn btn-ghost bg-orange-500 text-sm"
-						href="/"
-						title="back to home"
+					<a class="m-auto text-sm" href="/" title="back to home"
 						><svg
 							xmlns="http://www.w3.org/2000/svg"
 							class="w-6 h-6 fill-white"
