--- a/src/components/SelectNegeri.astro
+++ b/src/components/SelectNegeri.astro
@@ -42,7 +42,7 @@ Object.keys(Constants.locations).map((el: any) => {
 </button>
 <dialog id="my_modal_1" class="modal">
 	<div class="modal-box">
-		<div class="modal-action m-0 sticky top-0">
+		<div class="modal-action m-0 sticky top-0 float-right">
 			<form method="dialog">
 				<button class="btn btn-circle"
 					><svg
@@ -60,7 +60,7 @@ Object.keys(Constants.locations).map((el: any) => {
 				>
 			</form>
 		</div>
-		<ul tabindex="0" class="menu -mt-12">
+		<ul tabindex="0" class="menu">
 			{
 				Object.keys(Constants.locations).map((el: any) => (
 					<li>
