add favourite button next to city title

--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -8,13 +8,28 @@ const { city } = Astro.params;
 		<div class="stats shadow">
 			{
 				cities.map((el: any) => (
-					<div class="stat pt-0 pb-0">
+					<div class="relative stat pt-0 pb-0">
+						<a href="#" class="absolute top-0 left-5">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								fill="none"
+								viewBox="0 0 24 24"
+								class="inline-block w-4 h-4 stroke-current"
+							>
+								<path
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2"
+									d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
+								/>
+							</svg>
+						</a>
 						<a href={"/" + state + "/" + el[0]}>
 							<div
 								class={
 									el.indexOf(city) == 0
-										? "stat-title text-white"
-										: "stat-title "
+										? "ml-6 mb-2 stat-title text-white"
+										: "ml-6 mb-2 stat-title "
 								}
 							>
 								{el[0]}
@@ -22,8 +37,8 @@ const { city } = Astro.params;
 							<div
 								class={
 									el.indexOf(city) == 0
-										? "w-40 text-xs flex-initial break-words text-white"
-										: "w-40 text-xs flex-initial break-words text-gray-400"
+										? "w-48 text-xs flex-initial break-words text-white"
+										: "w-48 text-xs flex-initial break-words text-gray-400"
 								}
 							>
 								{el[1]}
