--- a/src/components/SelectNegeri.astro
+++ b/src/components/SelectNegeri.astro
@@ -42,7 +42,10 @@ Object.keys(Constants.locations).map((el: any) => {
 </button>
 <dialog id="my_modal_1" class="modal">
 	<div class="modal-box">
-		<div class="modal-action m-0 sticky top-0 float-right">
+		<div
+			class="justify-between items-center modal-action m-0 sticky top-0 pl-4 bg-base-100 z-10"
+		>
+			<h2>Please select state</h2>
 			<form method="dialog">
 				<button class="btn btn-circle"
 					><svg
