--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -9,7 +9,7 @@ const { city } = Astro.params;
 			{
 				cities.map((el: any) => (
 					<div class="relative stat pt-0 pb-0">
-						<a href="#" class="absolute top-0 left-5">
+						<a href="#" class="text-primary absolute top-0 left-5">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
 								fill="none"
