--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,77 +1,55 @@
-<!-- <hr class="h-px my-0 bg-gray-200 border-0 dark:bg-gray-700"> -->
-<footer
-	class="footer bg-base-200 footer-center p-10 text-base-content sticky top-[100vh]"
->
-	<aside>
-		<!-- <a href="/" title="back to adhan.app">
-		<svg width="30" height="30" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" class="fill-current"><path d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"></path></svg>
-		<p>adhan.app<br>waktu solat Malaysia</p>
-		</a> -->
-		<a class="text-xs uppercase" href="/" title="back to home">
+<footer class="p-6">
+	<!--	<aside class="nav text-center">-->
+	<aside
+		class="nav footer2 bg-base-2002 footer-center2 p-4 text-base-content sticky top-[100vh]av text-center"
+	>
+		<a class="inline-block text-xs uppercase" href="/" title="back to home">
 			adhanApp
-			<!-- <span class="flip">↗︎</span> -->
-			<!-- <br/> -->
-			. waktu solat malaysia
 		</a>
-		<div class="hidden navbar nav">
-			<div class="navbar-start">
-				<a class="btn btn-ghost text-lg" href="/" title="back to home"
-					>adhan.app</a
-				>
+		<div class="dropdown dropdown-top dropdown-end">
+			<div tabindex="0" role="button" class="btn btn-ghost text-sm m-1">
+				...
 			</div>
-			<div class="navbar-center"></div>
-			<div class="navbar-end">
-				<div class="dropdown dropdown-end">
-					<div
-						tabindex="0"
-						role="button"
-						class="btn btn-md btn-ghost rounded-btn text-xs uppercase"
-					>
-						...
-					</div>
-
-					<ul
-						tabindex="0"
-						class="menu dropdown-content p-2 shadow bg-base-200 rounded-box w-44 mt-4 z-20"
-					>
-						<li>
-							<label class="cursor-pointer label">
-								<input
-									type="checkbox"
-									title="toggle theme"
-									checked="checked"
-									class="checkbox checkbox-accent checkbox-xs"
-								/>
-								<span class="label-text">toggle theme</span>
-							</label>
-						</li>
-						<li>
-							<label class="cursor-pointer label">
-								<input
-									type="checkbox"
-									title="minimal mode"
-									checked="checked"
-									class="checkbox checkbox-accent checkbox-xs"
-								/>
-								<span class="label-text">minimal mode</span>
-							</label>
-						</li>
-						<hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
-						<li>
-							<label class="cursor-pointer label">
-								<input
-									name="worksonffline"
-									type="checkbox"
-									title="works offline"
-									checked="checked"
-									class="checkbox checkbox-accent checkbox-xs"
-								/>
-								<span class="label-text">works offline</span>
-							</label>
-						</li>
-					</ul>
-				</div>
-			</div>
+			<ul
+				tabindex="0"
+				class="dropdown-content z-[1] menu p-2 shadow bg-base-200 rounded-box w-52"
+			>
+				<li>
+					<label class="cursor-pointer label">
+						<input
+							type="checkbox"
+							title="toggle theme"
+							checked="checked"
+							class="checkbox checkbox-accent checkbox-xs"
+						/>
+						<span class="label-text">toggle theme</span>
+					</label>
+				</li>
+				<li>
+					<label class="cursor-pointer label">
+						<input
+							type="checkbox"
+							title="minimal mode"
+							checked="checked"
+							class="checkbox checkbox-accent checkbox-xs"
+						/>
+						<span class="label-text">minimal mode</span>
+					</label>
+				</li>
+				<hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
+				<li>
+					<label class="cursor-pointer label">
+						<input
+							name="worksonffline"
+							type="checkbox"
+							title="works offline"
+							checked="checked"
+							class="checkbox checkbox-accent checkbox-xs"
+						/>
+						<span class="label-text">works offline</span>
+					</label>
+				</li>
+			</ul>
 		</div>
 	</aside>
 </footer>
