--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { getWaktuSolat } from "../util";
 import Layout from "../layouts/Layout.astro";
 import PrayerTimeTable from "../components/PrayerTimeTable.astro";
 import Constants from "../constants";
@@ -10,7 +11,12 @@ const state =
 		"get waktusolat city from localstorage",
 	cities =
 		Constants.defaultSettings.waktuSolatCityArray ||
-		"get waktusolat cities from localstorage";
+		"get waktusolat cities from localstorage",
+	cityCode =
+		Constants.defaultSettings.waktuSolatStateCode ||
+		"get waktusolat city code from localstorage";
+
+const { hijri, date, day } = getWaktuSolat(cityCode);
 ---
 
 <Layout title="AdhanApp" state={state} city={cities}>
@@ -21,7 +27,7 @@ const state =
 			<h1 class="text-center text-xl font-bold">{city}</h1>
 			<hr class="hidden h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
 			<div class="hidden flex justify-evenly items-center">
-				<!--			<small>{hijri}, {date}, {day}</small>-->
+				<small>{hijri}, {date}, {day}</small>
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					fill="none"
