fix netlify build issue

--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,7 +1,7 @@
 <footer class="p-6">
 	<!--	<aside class="nav text-center">-->
 	<aside
-		class="nav footer2 bg-base-2002 footer-center2 p-4 text-base-content sticky top-[100vh]av text-center"
+		class="nav footer2 bg-base-2002 footer-center2 p-4 text-base-content sticky top-[100vh] text-center"
 	>
 		<a class="inline-block text-xs uppercase" href="/" title="back to home">
 			adhanApp
