fix footer sticky

--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,55 +1,48 @@
-<footer class="p-6">
-	<!--	<aside class="nav text-center">-->
-	<aside
-		class="nav footer2 bg-base-2002 footer-center2 p-4 text-base-content sticky top-[100vh] text-center"
-	>
-		<a class="inline-block text-xs uppercase" href="/" title="back to home">
-			adhanApp
-		</a>
-		<div class="dropdown dropdown-top dropdown-end">
-			<div tabindex="0" role="button" class="btn btn-ghost text-sm m-1">
-				...
-			</div>
-			<ul
-				tabindex="0"
-				class="dropdown-content z-[1] menu p-2 shadow bg-base-200 rounded-box w-52"
-			>
-				<li>
-					<label class="cursor-pointer label">
-						<input
-							type="checkbox"
-							title="toggle theme"
-							checked="checked"
-							class="checkbox checkbox-accent checkbox-xs"
-						/>
-						<span class="label-text">toggle theme</span>
-					</label>
-				</li>
-				<li>
-					<label class="cursor-pointer label">
-						<input
-							type="checkbox"
-							title="minimal mode"
-							checked="checked"
-							class="checkbox checkbox-accent checkbox-xs"
-						/>
-						<span class="label-text">minimal mode</span>
-					</label>
-				</li>
-				<hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
-				<li>
-					<label class="cursor-pointer label">
-						<input
-							name="worksonffline"
-							type="checkbox"
-							title="works offline"
-							checked="checked"
-							class="checkbox checkbox-accent checkbox-xs"
-						/>
-						<span class="label-text">works offline</span>
-					</label>
-				</li>
-			</ul>
-		</div>
-	</aside>
+<footer class="footer-center p-6 text-base-content sticky top-[100vh]" <aside>
+	<a class="inline-block text-xs uppercase" href="/" title="back to home">
+		adhanApp
+	</a>
+	<div class="dropdown dropdown-top dropdown-end">
+		<div tabindex="0" role="button" class="btn btn-ghost text-sm m-1">...</div>
+		<ul
+			tabindex="0"
+			class="dropdown-content z-[1] menu p-2 shadow bg-base-200 rounded-box w-52"
+		>
+			<li>
+				<label class="cursor-pointer label">
+					<input
+						type="checkbox"
+						title="toggle theme"
+						checked="checked"
+						class="checkbox checkbox-accent checkbox-xs"
+					/>
+					<span class="label-text">toggle theme</span>
+				</label>
+			</li>
+			<li>
+				<label class="cursor-pointer label">
+					<input
+						type="checkbox"
+						title="minimal mode"
+						checked="checked"
+						class="checkbox checkbox-accent checkbox-xs"
+					/>
+					<span class="label-text">minimal mode</span>
+				</label>
+			</li>
+			<hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
+			<li>
+				<label class="cursor-pointer label">
+					<input
+						name="worksonffline"
+						type="checkbox"
+						title="works offline"
+						checked="checked"
+						class="checkbox checkbox-accent checkbox-xs"
+					/>
+					<span class="label-text">works offline</span>
+				</label>
+			</li>
+		</ul>
+	</div>
 </footer>
