--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,8 +68,7 @@ const { title, state, city } = Astro.props;
 	header {
 		line-height: 1.6;
 	}
-	main .nav,
-	footer .nav {
+	main .nav {
 		position: relative;
 		margin: auto;
 		width: 1200px;
