--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,7 +1,5 @@
 <footer class="footer-center p-6 text-base-content sticky top-[100vh]" <aside>
-	<a class="inline-block text-xs uppercase" href="/" title="back to home">
-		adhanApp
-	</a>
+	<a class="inline-block" href="/" title="back to home"> adhan.app </a>
 	<div class="dropdown dropdown-top dropdown-end">
 		<div tabindex="0" role="button" class="btn btn-ghost text-sm m-1">...</div>
 		<ul
